--- a/package.json
+++ b/package.json
@@ -20,11 +20,28 @@
     "@angular/http": "4.1.3",
     "@angular/platform-browser": "4.1.3",
     "@angular/platform-browser-dynamic": "4.1.3",
+    "@ionic-native/call-number": "^4.1.0",
     "@ionic-native/core": "3.12.1",
+    "@ionic-native/geofence": "^4.1.0",
+    "@ionic-native/geolocation": "^4.1.0",
     "@ionic-native/splash-screen": "3.12.1",
     "@ionic-native/status-bar": "3.12.1",
     "@ionic/storage": "2.0.1",
+    "@types/google-maps": "^3.2.0",
+    "call-number": "^1.0.1",
+    "cordova-android": "^6.2.3",
+    "cordova-plugin-add-swift-support": "^1.6.0",
+    "cordova-plugin-compat": "^1.0.0",
+    "cordova-plugin-console": "^1.0.5",
+    "cordova-plugin-device": "^1.1.4",
+    "cordova-plugin-geofence": "^0.7.0",
+    "cordova-plugin-geolocation": "^2.4.3",
+    "cordova-plugin-splashscreen": "^4.0.3",
+    "cordova-plugin-statusbar": "^2.2.2",
+    "cordova-plugin-whitelist": "^1.3.1",
+    "es6-promise-plugin": "^4.1.0",
     "ionic-angular": "3.6.0",
+    "ionic-plugin-keyboard": "^2.2.1",
     "ionicons": "3.0.0",
     "rxjs": "5.4.0",
     "sw-toolbox": "3.6.0",
@@ -32,9 +49,26 @@
   },
   "devDependencies": {
     "@ionic/app-scripts": "2.1.3",
+    "@ionic/cli-plugin-cordova": "1.5.0",
     "@ionic/cli-plugin-ionic-angular": "1.4.0",
     "ionic": "3.6.0",
     "typescript": "2.3.4"
   },
-  "description": "An Ionic project"
+  "description": "An Ionic project",
+  "cordova": {
+    "plugins": {
+      "cordova-plugin-console": {},
+      "cordova-plugin-device": {},
+      "cordova-plugin-splashscreen": {},
+      "cordova-plugin-statusbar": {},
+      "cordova-plugin-whitelist": {},
+      "ionic-plugin-keyboard": {},
+      "cordova-plugin-geolocation": {},
+      "mx.ferreyra.callnumber": {},
+      "cordova-plugin-geofence": {}
+    },
+    "platforms": [
+      "android"
+    ]
+  }
 }
